# nes-emulator

./: Cargo.toml  compare_traces.py  go6502
src/: cpu.rs  frame.rs  instructions.rs  main.rs  mapper.rs  memory_bus.rs  nes_tests.rs  opcodes.rs  ppu.rs  pputemp.rs  rom.rs
tests/: nestest_trace.txt  transform.py
