[package]
name = "nes-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
bitflags = "2.4.0"
macroquad = "0.4.4"

[dependencies.sdl2]
version = "0.36"
default-features = false
features = ["ttf","image","gfx","mixer"]
